[gd_scene load_steps=4 format=3 uid="uid://dempeiar8tjic"]

[ext_resource type="Script" path="res://Scripts/Units/player.gd" id="1_longq"]
[ext_resource type="Script" path="res://Scripts/Units/player_camera.gd" id="2_43v2b"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_16yd3"]
radius = 0.6

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_longq")

[node name="player_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_16yd3")

[node name="camera_rotation" type="Node3D" parent="."]
script = ExtResource("2_43v2b")

[node name="camera_arm" type="SpringArm3D" parent="camera_rotation"]

[node name="player_camera" type="Camera3D" parent="camera_rotation/camera_arm"]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
